# GSP

./: .gitignore  CMakeLists.txt  ImplementationNotes.md  README.md  c_style_guide.md  commands.md
bindings/GSPNet/: GSPCore.cs
c_tests/simple/: CMakeLists.txt  main.c
c_tests/simple/.cache/clangd/index/: main.c.95FECF790CCF5AA8.idx
externalSamplePrograms/: cairoText
gBuild/files/macOS/: minimal.plist
gBuild/files/web/: index.html
gGCL/: README.md
gGCL/include/: gGPU.h
gPAL/: README.md
gSerKit/: CMakeLists.txt  README.md  gSkXml.c
gSerKit/include/: gSerKit.h  gSkXml.h
gVG/: CMakeLists.txt  README.md  gVG.c
gVG/include/gVG/: gVG.h
gVG/include/gVG/kernel/: gVG_kernel.h  gVG_thread.h
gVG/include/gVG/kernel/posix/: gVG_job_posix.h
gVG/include/gVG/pipeline/bytegen/: gvg_bytegen.h
gVG/include/gVG/pipeline/combine/: gvg_combine.h
gVG/include/gVG/pipeline/common/: gvg_common.h
gVG/pipeline/: gvg_bytegen.c  gvg_combine.c  gvg_common.c
gVG/posix/: gVG_kernel.c  gVG_thread.c
gWin/: CMakeLists.txt  README.md  cmake_install.cmake  gWin.c
gWin/include/gWin/: gWin.h
gWin/include/gWin/macOS/: gWin_macOS.h
gWin/include/gWin/win32/: gWin_win32.h
gWin/include/gWin/x11/: gWin_x11.h
gWin/macOS/: gWin.m
gWin/win32/: gWin.c
gWin/x11/: gWin.c  gWin_x11.c
gsp_gpi/: Cargo.toml
gsp_gpi/src/: bin.rs
gsp_system/: Cargo.toml  README.md
gsp_system/include/: gsp_system.h
gsp_system/src/: bin.rs  internal.rs  lib.rs
gsp_system/src/macos/: mod copy.rs  mod.rs
gsp_system/src/windows/: mod.rs
libraries/: CMakeLists.txt  README.md
libraries/GSPCore/: CMakeLists.txt  README.md
libraries/GSPCore/def/: GVectorDef.h  GWindowDef.h
libraries/GSPCore/include/GSPCore/: GLog.h  GVector.h  GWindow.h
libraries/GSPCore/include/GSPCore/Graphics/: GGI.h  GTexture.h
libraries/GSPCore/internal/def/: GVectorDef.h  GWindowDef.h
libraries/GSPCore/internal/include/: GVector.h
libraries/GSPCore/src/: GApplication.c  GSPCore.c  GVector.c
libraries/GSPCore/src/graphics/gl/: GTexture_gl.c
libraries/GSPCore/src/platform/x11/: GSPCore_x11.c  GWindow_x11.c
pico_test/: CMakeLists.txt  main.c  pico_display_2_demo.cpp
pico_test/drivers/: CMakeLists.txt
pico_test/libraries/: CMakeLists.txt
pico_test/libraries/pico_display_2/: README.md
pico_test/libraries/pico_graphics/: pico_graphics.hpp
python_tests/simple/: simple.py
simple_test/: Program.cs  simple_test.csproj
src/: CMakeLists.txt
src/GSP-Graphics/: CMakeLists.txt
src/GSP-Graphics/include/: gOpenGL.h
src/GSP-Graphics/src/Win32/: GspGraphics.cpp
src/GSP-System/: CMakeLists.txt
src/GSP-System/include/: gApplication.h  gLog.h  gPlatform.h  gSize.h  gWindow.h
src/GSP-System/src/Win32/: GspSystem.cpp
src/GVG/: GVG.cpp  GVG.h  Termsyn.h  main.cpp
src/Graphics/: CMakeLists.txt
src/Graphics/include/: GspGraphics.h  GspVulkan.h  gVulkan.h
src/Graphics/src/Win32/: GspGraphics.cpp  gOpenGL.cpp  gVulkan.cpp
src/System/: CMakeLists.txt
src/System/include/: GspFunctionTypes.h  GspLog.h  GspPlatform.h  GspSystem.h  gColor.h  gRect.h  gResult.h
src/System/src/Win32/: GspSystem.cpp
src/Test/src/: main.c  main.cpp  mainOld.cpp  mainTRIAngle.cpp  mainWayland.cpp
src/Windowing/include/: gPoint.h  gResult.h  gWindow.h
src/gvg/: Cargo.toml
src/gvg/interface/: gvg.h
src/gvg/src/: basic_types.rs  lib.rs  painting.rs  path.rs  shapes.rs
src/gvg/src/engine/: mod.rs
src/gvg/src/interface/: mod.rs  painting.rs  path.rs  shapes.rs
testing/: emcc_test.c  gSkTest.c  main.c  posix_thread_example copy.c  timing.c  vgv_test.c  windowTest.c  windows_thread_example.c
utilities/: psf2txt.c
windows_example/: Cargo.toml
