[package]
name = "gsp_gpi"
version = "0.1.0"
edition = "2021"
description = "OpenGSP Graphics Programming Interface Package"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gsp_gpi"
path = "src/lib.rs"

[[bin]]
name = "gsp_gpi_test"
path = "src/bin.rs"

[dependencies]
env_logger = "0.10"
wgpu = "0.19.4"
gsp_system = { path = "./../gsp_system" }
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
    ] }
raw-window-handle = "0.6.1"
futures = "0.3.30"
lazy_static = "1.4.0"
