[package]
name = "gsp_system"
version = "0.1.1"
edition = "2021"
description = "OpenGSP System Package"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gsp_system_test"
path = "src/bin.rs"

[lib]
name = "gsp_system"
path = "src/lib.rs"


[dependencies]
objc2 = "0.5.1"
