[package]
name = "gsp_system"
version = "0.1.2"
edition = "2021"
description = "OpenGSP System Package"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "gsp_system"
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.1"
objc2-foundation = { version = "0.2.0", features = [
    "NSNotification",
    "NSGeometry",
] }
objc2-app-kit = { version = "0.2.0", features = ["NSWindow", "NSResponder"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[dependencies]
